gatekeeper-library/input/validation/general/route-https-only/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRouteHttpsOnly
metadata:
  name: route-https-only
spec:
  enforcementAction: deny
  match:
    kinds:
      - apiGroups: ["route.openshift.io"]
        kinds: ["Route"]
